1. Added chatRoute, chatController and chatModel 2. create chat and fetch chats 3. css overflow fix for add friends modal

--- a/client/src/components/AddFriends/AddFriends.css
+++ b/client/src/components/AddFriends/AddFriends.css
@@ -2,3 +2,8 @@
     display: flex !important;
     justify-content: space-between;
 }
+
+.add-friend {
+    overflow-y: auto;
+    height: calc(100vh - 293px) !important;
+}
