--- a/client/src/components/ChatTabs/ChatTabs.css
+++ b/client/src/components/ChatTabs/ChatTabs.css
@@ -4,7 +4,7 @@
     padding: 10px;
 }
 
-.chatName {
+.chats-tab, .friends-tab {
     overflow-y: auto;
     height: calc(100vh - 159px) !important;
 }
@@ -67,4 +67,8 @@
     100% {
         transform: rotate(0.0deg)
     }
+}
+
+.mg-l10 {
+    margin-left: 10px;
 }
